# tripleo-image-elements

./: .gitignore  .gitreview  .stestr.conf  HACKING.rst  MANIFEST.in  README.md  README.rst  requirements.txt  run-flake8  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
docs/: ci.md
elements/ansible/: README.md  element-deps
elements/apache2/: README.md  element-deps  svc-map
elements/bandersnatch/: README.md  element-deps
elements/bm-dnsmasq/: README.md  element-deps
elements/boot-stack/: README.md  config.json  element-deps  stackrc
elements/ceilometer/: README.md  element-deps  pkg-map  source-repository-ceilometer
elements/ceilometer-agent-central/: README.md  element-deps  pkg-map  svc-map
elements/ceilometer-agent-compute/: README.md  element-deps  pkg-map  svc-map
elements/ceilometer-agent-notification/: README.md  pkg-map  svc-map
elements/ceilometer-alarm-evaluator/: README.md  svc-map
elements/ceilometer-alarm-notifier/: README.md  element-deps  pkg-map  svc-map
elements/ceilometer-api/: README.md  element-deps  pkg-map  svc-map
elements/ceilometer-collector/: README.md  pkg-map  svc-map
elements/ceilometer-overcloud-config/: README.md  element-deps
elements/check_mk-agent/: README.md  element-deps  svc-map
elements/cinder/: README.md  element-deps  source-repository-cinder
elements/cinder-api/: README.md  element-deps  svc-map
elements/cinder-lio/: README.md  element-deps
elements/cinder-tgt/: README.md  element-deps  svc-map
elements/cinder-volume/: README.md  element-deps  pkg-map  svc-map
elements/cinder-volume-nfs/: README.md  element-deps
elements/collectl/: README.md  element-deps  svc-map
elements/common-venv/: README.md
elements/contrail-repo/: README.md  element-deps
elements/corosync/: README.md  element-deps  svc-map
elements/debian-mirror/: README.md  element-deps
elements/delorean-repo/: README.md  pkg-map
elements/devstack/: element-deps  source-repository-devstack  source-repository-incubator
elements/disable-os-collect-config/: README.md
elements/diskimage-builder/: README.md  element-deps  source-repository-diskimage-builder
elements/enable-packages-install/: README.md
elements/fedora-rdo-icehouse/: README.md  element-deps
elements/fedora-rdo-icehouse-repository/: README.md  element-deps
elements/geard/: README.md  element-deps  svc-map
elements/gearman/: README  element-deps
elements/glance/: README.md  element-deps  source-repository-glance  svc-map
elements/haproxy/: README.md
elements/heat-api/: README.md  element-deps  svc-map
elements/heat-cfntools/: README.md  element-deps  source-repository-heat-cfntools
elements/heat-engine/: README.md  element-deps  svc-map
elements/heat-localip/: README.md
environment.d/: 10-ironic-agent-multipath.bash
tests/: base.py  test_no_dup_filenames.py
tools/: releasenotes_tox.sh
zuul.d/: layout.yaml
(+1035 files in other folders)
