[metadata]
name = tripleo-image-elements
summary = Disk image builder elements for deploying OpenStack.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
license = Apache License (2.0)
home-page = https://opendev.org/openstack/tripleo-image-elements
classifier =
    Environment :: OpenStack
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Other
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
data_files =
    share/tripleo-image-elements = elements/*

[wheel]
universal = 1

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
