[metadata]
name = tripleo-image-elements
summary = Disk image builder elements for deploying OpenStack.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
license = Apache License (2.0)
home-page = https://opendev.org/openstack/tripleo-image-elements
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Other
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
data_files =
    share/tripleo-image-elements = elements/*
